--- a/galeria_ordenable.html
+++ b/galeria_ordenable.html
@@ -1,37 +1,35 @@
 <!doctype html>
-<html lang="en">
+<html lang="ee">
 <head>
 <meta charset="utf-8">
-<title>jQuery UI Sortable - Display as grid</title>
-<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-<script src="//code.jquery.com/jquery-1.10.2.js"></script>
-<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-<link rel="stylesheet" href="http://jqueryui.com/resources/demos/style.css">
-<style>
-#sortable { list-style-type: none; margin: 0; padding: 0; width: 450px; }
-#sortable li { margin: 3px 3px 3px 0; padding: 1px; float: left; width: 100px; height: 90px; font-size: 4em; text-align: center; }
-</style>
+<title>Galeria ordenable</title>
+
+<!-- fotos de http://es.freeimages.com/ -->
+
+<link rel="stylesheet" href="./js/jquery-ui.min.css">
+<script src="./js/jquery-1.11.3.min.js"></script>
+<script src="./js/jquery-ui.min.js"></script>
+<link rel="stylesheet" href="./style.css">
 <script>
 $(function() {
-$( "#sortable" ).sortable();
+$( "#sortable" ).sortable({
+  stop: function( event, ui ) {
+    alert("listo");
+  }
+});
 $( "#sortable" ).disableSelection();
 });
+
 </script>
 </head>
 <body>
 <ul id="sortable">
-<li class="ui-state-default">1</li>
-<li class="ui-state-default">2</li>
-<li class="ui-state-default">3</li>
-<li class="ui-state-default">4</li>
-<li class="ui-state-default">5</li>
-<li class="ui-state-default">6</li>
-<li class="ui-state-default">7</li>
-<li class="ui-state-default">8</li>
-<li class="ui-state-default">9</li>
-<li class="ui-state-default">10</li>
-<li class="ui-state-default">11</li>
-<li class="ui-state-default">12</li>
+<li class="ui-state-default"><img src="./fotos/autumn-leaves-1259191-639x460.jpg" /><span>1</span></li>
+<li class="ui-state-default"><img src="./fotos/color-stripes-1169611-639x426.jpg" /><span>2</span></li>
+<li class="ui-state-default"><img src="./fotos/goldfractalzzz-1-1169741-638x393.jpg" /><span>3</span></li>
+<li class="ui-state-default"><img src="./fotos/goldfractalzzz-24-1169734-639x511.jpg" /><span>4</span></li>
+<li class="ui-state-default"><img src="./fotos/this-photo-is-only-for-test-1620626-639x426.jpg" /><span>5</span></li>
 </ul>
+
 </body>
 </html>
