--- a/galeria_ordenable.html
+++ b/galeria_ordenable.html
@@ -9,17 +9,24 @@
 <link rel="stylesheet" href="./js/jquery-ui.min.css">
 <script src="./js/jquery-1.11.3.min.js"></script>
 <script src="./js/jquery-ui.min.js"></script>
+
+<link rel="stylesheet" href="./js/highlightjs/styles/default.css">
+<script src="./js/highlightjs/highlight.pack.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+
 <link rel="stylesheet" href="./style.css">
 <script>
 $(function() {
 $( "#sortable" ).sortable({
   stop: function( event, ui ) {
-    alert("listo");
+    //alert("listo");
   }
 });
 $( "#sortable" ).disableSelection();
 });
-
+$("#generar_html").click(function(){
+  alert("generar_html");
+});
 </script>
 </head>
 <body>
@@ -31,5 +38,9 @@ $( "#sortable" ).disableSelection();
 <li class="ui-state-default"><img src="./fotos/this-photo-is-only-for-test-1620626-639x426.jpg" /><span>5</span></li>
 </ul>
 
+<div id="salida">
+<div id="generar_html" class="menu-item">GENERAR HTML</div>
+<pre id="salida_html"><code class="nohighlight">...</code></pre>
+</div>
 </body>
 </html>
